--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "lint": "eslint src --ext .ts,.tsx"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@rocketseat/eslint-config": "^1.2.0",
+    "axios": "^1.3.4",
     "eslint": "^8.36.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
