--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@rocketseat/eslint-config": "^1.2.0",
     "axios": "^1.3.4",
+    "date-fns": "^2.29.3",
     "eslint": "^8.36.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^8.0.6",
+    "remark-gfm": "^3.0.1",
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
