--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.6",
+    "react-router-dom": "^6.9.0",
     "remark-gfm": "^3.0.1",
     "styled-components": "^5.3.9"
   },
